syntax = "proto3";

package blockchain;

import "github.com/iov-one/weave/x/nft/codec.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/iov-one/weave/x/nft/ticker/codec.proto";


message BlockchainToken {
    nft.NonFungibleToken base = 1;
    TokenDetails details = 2;
}

message TokenDetails {
    Config config = 1 [(gogoproto.nullable) = false];
}

enum Codec {
    bns = 0;
    lisk = 1;
}

enum Env {
    mainnet = 0;
    testnet = 1;
}

message Config {
    string chainID = 1;
    Codec codec = 2;
    string codecConfig = 3;
    bool live = 4;
    Env env = 5;
    bytes mainTickerID = 6;
}

message IssueTokenMsg {
    bytes owner = 1;
    bytes id = 2;
    TokenDetails details = 3 [(gogoproto.nullable) = false];
    repeated nft.ActionApprovals approvals = 4 [(gogoproto.nullable) = false];
}