syntax = "proto3";

package bootstrap_node;

import "github.com/iov-one/weave/x/nft/codec.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";


message BootstrapNodeToken {
    nft.NonFungibleToken base = 1;
    TokenDetails details = 2;
}

message TokenDetails {
    bytes blockchain_id = 1 [(gogoproto.customname) = "BlockchainID"];
    URI uri = 2 [(gogoproto.nullable) = false];
}

message URI {
    string host = 1;
    int32 port = 2;
    string protocol = 3;
    string pub_key = 4;
}

message IssueTokenMsg {
    bytes owner = 1;
    bytes id = 2 [(gogoproto.customname) = "ID"];
    TokenDetails details = 3 [(gogoproto.nullable) = false];
    repeated nft.ActionApprovals approvals = 4 [(gogoproto.nullable) = false];
}
